zetasql/analyzer/testdata/tumble_hop_tvfs_no_ts_col.test
[default language_features={{NONE|MAXIMUM}},+TABLE_VALUED_FUNCTIONS, +TUMBLE_HOP_TVFS, +INTERVAL_TYPE, +NAMED_ARGUMENTS, +TUMBLE_HOP_TVFS_NO_TIMESTAMP_COL]

# TUMBLE_NO_TS_COL resolves correctly, adds the window start and end columns.

SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY);
--
QueryStmt
+-output_column_list=
| +-tumble.ts_col#3 AS ts_col [TIMESTAMP]
| +-tumble.WINDOW_START#4 AS WINDOW_START [TIMESTAMP]
| +-tumble.WINDOW_END#5 AS WINDOW_END [TIMESTAMP]
+-query=
  +-ProjectScan
    +-column_list=tumble.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
    +-input_scan=
      +-TVFScan
        +-column_list=tumble.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
        +-tvf=ZetaSQL:tumble((ANY TABLE table_expr, STRING timestamp_column, INTERVAL window_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE; (ANY TABLE table_expr, INTERVAL window_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE)
        +-signature=(TABLE<ts_col TIMESTAMP>, INTERVAL, literal TIMESTAMP) -> TABLE<ts_col TIMESTAMP, WINDOW_START TIMESTAMP, WINDOW_END TIMESTAMP>
        +-argument_list=
        | +-FunctionArgument
        | | +-scan=
        | | | +-TableScan(column_list=[TableWithTimestampColumn.ts_col#2], table=TableWithTimestampColumn, column_index_list=[0])
        | | +-argument_column_list=[TableWithTimestampColumn.ts_col#2]
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=DAY)
        | +-FunctionArgument
        |   +-expr=
        |     +-Literal(type=TIMESTAMP, value=1970-01-01 00:00:00+00)
        +-column_index_list=[0, 1, 2]
        +-function_call_signature=(ANY TABLE table_expr, INTERVAL window_size, optional(1) TIMESTAMP origin) -> ANY TABLE
==

# HOP_NO_TS_COL resolves correctly, adds the window start and end columns.

SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 HOUR);
--
QueryStmt
+-output_column_list=
| +-hop.ts_col#3 AS ts_col [TIMESTAMP]
| +-hop.WINDOW_START#4 AS WINDOW_START [TIMESTAMP]
| +-hop.WINDOW_END#5 AS WINDOW_END [TIMESTAMP]
+-query=
  +-ProjectScan
    +-column_list=hop.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
    +-input_scan=
      +-TVFScan
        +-column_list=hop.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
        +-tvf=ZetaSQL:hop((ANY TABLE table_expr, STRING timestamp_column, INTERVAL window_size, INTERVAL step_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE; (ANY TABLE table_expr, INTERVAL window_size, INTERVAL step_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE)
        +-signature=(TABLE<ts_col TIMESTAMP>, INTERVAL, INTERVAL, literal TIMESTAMP) -> TABLE<ts_col TIMESTAMP, WINDOW_START TIMESTAMP, WINDOW_END TIMESTAMP>
        +-argument_list=
        | +-FunctionArgument
        | | +-scan=
        | | | +-TableScan(column_list=[TableWithTimestampColumn.ts_col#2], table=TableWithTimestampColumn, column_index_list=[0])
        | | +-argument_column_list=[TableWithTimestampColumn.ts_col#2]
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=DAY)
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=HOUR)
        | +-FunctionArgument
        |   +-expr=
        |     +-Literal(type=TIMESTAMP, value=1970-01-01 00:00:00+00)
        +-column_index_list=[0, 1, 2]
        +-function_call_signature=(ANY TABLE table_expr, INTERVAL window_size, INTERVAL step_size, optional(1) TIMESTAMP origin) -> ANY TABLE
==

# TUMBLE_NO_TS_COL with origin argument.

SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, origin => TIMESTAMP("1970-01-01"));
--
QueryStmt
+-output_column_list=
| +-tumble.ts_col#3 AS ts_col [TIMESTAMP]
| +-tumble.WINDOW_START#4 AS WINDOW_START [TIMESTAMP]
| +-tumble.WINDOW_END#5 AS WINDOW_END [TIMESTAMP]
+-query=
  +-ProjectScan
    +-column_list=tumble.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
    +-input_scan=
      +-TVFScan
        +-column_list=tumble.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
        +-tvf=ZetaSQL:tumble((ANY TABLE table_expr, STRING timestamp_column, INTERVAL window_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE; (ANY TABLE table_expr, INTERVAL window_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE)
        +-signature=(TABLE<ts_col TIMESTAMP>, INTERVAL, TIMESTAMP) -> TABLE<ts_col TIMESTAMP, WINDOW_START TIMESTAMP, WINDOW_END TIMESTAMP>
        +-argument_list=
        | +-FunctionArgument
        | | +-scan=
        | | | +-TableScan(column_list=[TableWithTimestampColumn.ts_col#2], table=TableWithTimestampColumn, column_index_list=[0])
        | | +-argument_column_list=[TableWithTimestampColumn.ts_col#2]
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=DAY)
        | +-FunctionArgument
        |   +-expr=
        |     +-FunctionCall(ZetaSQL:timestamp(STRING, optional(0) STRING) -> TIMESTAMP)
        |       +-Literal(type=STRING, value="1970-01-01")
        +-column_index_list=[0, 1, 2]
        +-function_call_signature=(ANY TABLE table_expr, INTERVAL window_size, optional(1) TIMESTAMP origin) -> ANY TABLE
==

# HOP_NO_TS_COL with origin argument.

SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 HOUR, origin => TIMESTAMP("1970-01-01"));
--
QueryStmt
+-output_column_list=
| +-hop.ts_col#3 AS ts_col [TIMESTAMP]
| +-hop.WINDOW_START#4 AS WINDOW_START [TIMESTAMP]
| +-hop.WINDOW_END#5 AS WINDOW_END [TIMESTAMP]
+-query=
  +-ProjectScan
    +-column_list=hop.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
    +-input_scan=
      +-TVFScan
        +-column_list=hop.[ts_col#3, WINDOW_START#4, WINDOW_END#5]
        +-tvf=ZetaSQL:hop((ANY TABLE table_expr, STRING timestamp_column, INTERVAL window_size, INTERVAL step_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE; (ANY TABLE table_expr, INTERVAL window_size, INTERVAL step_size, optional TIMESTAMP {default_value: 1970-01-01 00:00:00+00} origin) -> ANY TABLE)
        +-signature=(TABLE<ts_col TIMESTAMP>, INTERVAL, INTERVAL, TIMESTAMP) -> TABLE<ts_col TIMESTAMP, WINDOW_START TIMESTAMP, WINDOW_END TIMESTAMP>
        +-argument_list=
        | +-FunctionArgument
        | | +-scan=
        | | | +-TableScan(column_list=[TableWithTimestampColumn.ts_col#2], table=TableWithTimestampColumn, column_index_list=[0])
        | | +-argument_column_list=[TableWithTimestampColumn.ts_col#2]
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=DAY)
        | +-FunctionArgument
        | | +-expr=
        | |   +-FunctionCall(ZetaSQL:$interval(INT64, ENUM<zetasql.functions.DateTimestampPart>) -> INTERVAL)
        | |     +-Literal(type=INT64, value=1)
        | |     +-Literal(type=ENUM<zetasql.functions.DateTimestampPart>, value=HOUR)
        | +-FunctionArgument
        |   +-expr=
        |     +-FunctionCall(ZetaSQL:timestamp(STRING, optional(0) STRING) -> TIMESTAMP)
        |       +-Literal(type=STRING, value="1970-01-01")
        +-column_index_list=[0, 1, 2]
        +-function_call_signature=(ANY TABLE table_expr, INTERVAL window_size, INTERVAL step_size, optional(1) TIMESTAMP origin) -> ANY TABLE
==

[language_features=MAXIMUM{{,-TUMBLE_HOP_TVFS|}}]
# TUMBLE fails when the TUMBLE_HOP_TVFS is not enabled.
SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY);
--
ERROR: Table-valued function not found: tumble [at 2:15]
SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY);
              ^
==

[language_features=MAXIMUM{{,-TUMBLE_HOP_TVFS|}}]
# HOP fails when the TUMBLE_HOP_TVFS is not enabled.
SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 HOUR);
--
ERROR: Table-valued function not found: hop [at 2:15]
SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 ...
              ^
==

[language_features={{NONE|MAXIMUM}},+TABLE_VALUED_FUNCTIONS, +TUMBLE_HOP_TVFS, +INTERVAL_TYPE, +NAMED_ARGUMENTS,]
# TUMBLE_NO_TS_COL fails when TUMBLE_HOP_TVFS_NO_TIMESTAMP_COL is not enabled.
SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY);
--
ERROR: No matching signature for table valued function : TUMBLE. Supported Signatures: TUMBLE(table_expr => TABLE, timestamp_column => STRING, window_size => INTERVAL, [origin => TIMESTAMP]) [at 2:15]
SELECT * FROM tumble(TABLE TableWithTimestampColumn, INTERVAL 1 DAY);
              ^
==

[language_features={{NONE|MAXIMUM}},+TABLE_VALUED_FUNCTIONS, +TUMBLE_HOP_TVFS, +INTERVAL_TYPE, +NAMED_ARGUMENTS,]
# HOP_NO_TS_COL fails when TUMBLE_HOP_TVFS_NO_TIMESTAMP_COL is not enabled.
SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 HOUR);
--
ERROR: No matching signature for table valued function : HOP. Supported Signatures: HOP(table_expr => TABLE, timestamp_column => STRING, window_size => INTERVAL, step_size => INTERVAL, [origin => TIMESTAMP]) [at 2:15]
SELECT * FROM hop(TABLE TableWithTimestampColumn, INTERVAL 1 DAY, INTERVAL 1 ...
              ^
